--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -22,7 +22,9 @@ body {
   height: auto;
   position: absolute;
   bottom: 0px;
-  right: -100px;
+  right: 0px;
+  animation-name: fadeInUp;
+  animation-duration: 2s;
   transition: 0.6s;
 }
 .main .whatsapp img {
@@ -131,6 +133,7 @@ body {
 }
 .main .navMobile .links ul {
   list-style: none;
+  padding: 0;
 }
 .main .navMobile .links ul li a {
   color: white;
