--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -472,6 +472,11 @@ body {
     flex-direction: column-reverse;
   }
 }
+@media screen and (max-width: 860px) {
+  .projects .projects-container .project:nth-child(6) {
+    flex-direction: column-reverse;
+  }
+}
 .projects .projects-container .project {
   width: 100%;
   height: 300px;
