--- a/Styles/Styles.scss
+++ b/Styles/Styles.scss
@@ -702,6 +702,7 @@ body {
                 font-size: 18px;
                 font-weight: 500;
                 padding-left: 10px;
+                border: 1px solid black;
             }
 
             textarea {
@@ -711,6 +712,7 @@ body {
                 font-size: 18px;
                 font-weight: 500;
                 padding-left: 10px;
+                border: 1px solid black;
             }
 
             button {
