--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -11,7 +11,7 @@ body {
 
 .main {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.712)), url(../Assets/background-image.webp);
   background-attachment: fixed;
   background-position: center;
