--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -11,10 +11,9 @@ body {
 
 .main {
   width: 100%;
-  height: 100dvh;
+  height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.712)), url(../Assets/background-image.webp);
   background-attachment: fixed;
-  background-position: center;
   position: relative;
 }
 .main .whatsapp {
