--- a/Styles/Styles.scss
+++ b/Styles/Styles.scss
@@ -14,12 +14,10 @@ body {
 // MAIN SECTION
 .main {
     width: 100%;
-    height: 100dvh;
+    height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.712)), url(../Assets/background-image.webp);
     background-attachment: fixed;
-    background-position: center;
     position: relative;
-
     // WHATSAPP 
     .whatsapp {
         width: auto;
