--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -23,7 +23,7 @@ body {
   bottom: 0px;
   right: 0px;
   transition: 0.6s;
-  animation-name: fadeInUp;
+  animation-name: fadeInRight;
   animation-duration: 2s;
 }
 .main .whatsapp img {
@@ -33,6 +33,43 @@ body {
 }
 .main .whatsapp img:hover {
   scale: 0.9;
+}
+.main .whatsapp-message {
+  width: 230px;
+  height: 30px;
+  background-color: white;
+  position: absolute;
+  right: 110px;
+  bottom: 50px;
+  display: flex;
+  border-radius: 17px;
+  transition: 0.6s;
+  animation: fadeInRight;
+  animation-duration: 1.5s;
+}
+.main .whatsapp-message .whatsapp-message-1 {
+  width: 92%;
+  height: 100%;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main .whatsapp-message .whatsapp-message-1 p {
+  font-family: "Rajdhani", sans-serif;
+  margin-left: 15px;
+  font-weight: 900;
+}
+.main .whatsapp-message .whatsapp-message-2 {
+  width: 21px;
+  height: 21px;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  right: 0;
+  top: 4px;
+  rotate: 45deg;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 .main .nav {
   width: 100%;
@@ -203,6 +240,88 @@ body {
   color: #000;
 }
 
+/* .service {
+    width: 100%;
+    height: auto;
+
+    .title {
+        width: 1200px;
+        height: auto;
+        margin: 0 auto;
+        text-align: end;
+
+        @include tablet1 {
+            width: 90%;
+        }
+
+        p {
+            font-family: 'Rajdhani', sans-serif;
+            font-weight: 900;
+            font-size: 40px;
+            text-decoration: underline;
+        }
+    }
+
+    .service-card {
+        width: 1200px;
+        height: auto;
+        min-height: 280px;
+        background-color: $color-white;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin: 0 auto;
+
+        @include tablet1 {
+            width: 90%;
+            justify-content: center;
+            gap: 40px;
+        }
+
+        .service-card-1 {
+            width: 370px;
+            height: 280px;
+            background-color: $color-white;
+            box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.226);
+            border-radius: 10px;
+            transition: 0.2s;
+
+            &:hover {
+                scale: 1.02;
+                box-shadow: 10px 10px 1px 1px rgba(0, 0, 0, 0.692);
+            }
+
+            .service-card-1-img {
+                width: 100%;
+                height: 40%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .web {
+                    width: 60px;
+                    margin-top: 10px;
+                }
+
+                .mobile {
+                    width: 80px;
+                    margin-top: 10px;
+                }
+            }
+
+            p {
+                width: 90%;
+                // background-color: antiquewhite;
+                margin: auto;
+                text-align: center;
+                text-justify:auto;
+                font-family: 'Rajdhani', sans-serif;
+                font-weight: 900;
+            }
+        }
+    }
+} */
 .about {
   width: 100%;
   height: auto;
@@ -236,7 +355,7 @@ body {
 }
 .about .info-me p {
   font-family: "Rajdhani", sans-serif;
-  font-weight: 300;
+  font-weight: 500;
   font-size: 25px;
 }
 .about .education {
@@ -252,7 +371,7 @@ body {
 .about .education .title-education {
   width: 100%;
   height: auto;
-  text-align: end;
+  text-align: start;
 }
 .about .education .title-education p {
   font-family: "Rajdhani", sans-serif;
@@ -272,7 +391,7 @@ body {
 .about .education .education-info .education-card {
   width: 100%;
   height: auto;
-  border: 2px solid #000;
+  box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.226);
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -357,7 +476,7 @@ body {
   position: absolute;
   padding: 10px 1.5%;
   border: 2px solid #000;
-  border-radius: 10px;
+  border-radius: 5px;
   right: 10px;
   font-family: "Rajdhani", sans-serif;
   font-weight: 900;
@@ -389,7 +508,7 @@ body {
 .about .skills .title-skills {
   width: 100%;
   height: auto;
-  text-align: start;
+  text-align: end;
 }
 .about .skills .title-skills p {
   font-family: "Rajdhani", sans-serif;
@@ -433,7 +552,7 @@ body {
   width: 1200px;
   height: auto;
   margin: 0 auto;
-  text-align: end;
+  text-align: start;
 }
 @media screen and (max-width: 1250px) {
   .projects .title {
@@ -551,7 +670,12 @@ body {
   height: 90%;
   border-radius: 10px;
   background-size: cover;
-  border: 2px solid black;
+  box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.226);
+  transition: 0.2s;
+}
+.projects .projects-container .project .img:hover {
+  scale: 1.02;
+  box-shadow: 10px 10px 1px 1px rgba(0, 0, 0, 0.692);
 }
 @media screen and (max-width: 860px) {
   .projects .projects-container .project .img {
