--- a/Styles/Styles.scss
+++ b/Styles/Styles.scss
@@ -274,8 +274,8 @@ body {
     }
 }
 
-// SERVICE-SECTION
-/* .service {
+/* SERVICE-SECTION
+.service {
     width: 100%;
     height: auto;
 
@@ -297,11 +297,13 @@ body {
         }
     }
 
-    .service-card {
+    .service-container {
         width: 1200px;
         height: auto;
-        min-height: 280px;
+        min-height: 600px;
         background-color: $color-white;
+        box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.226);
+        border-radius: 10px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -314,47 +316,18 @@ body {
             gap: 40px;
         }
 
-        .service-card-1 {
-            width: 370px;
-            height: 280px;
-            background-color: $color-white;
-            box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.226);
-            border-radius: 10px;
-            transition: 0.2s;
-
-            &:hover {
-                scale: 1.02;
-                box-shadow: 10px 10px 1px 1px rgba(0, 0, 0, 0.692);
-            }
-
-            .service-card-1-img {
-                width: 100%;
-                height: 40%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                .web {
-                    width: 60px;
-                    margin-top: 10px;
-                }
-
-                .mobile {
-                    width: 80px;
-                    margin-top: 10px;
-                }
-            }
-
-            p {
-                width: 90%;
-                // background-color: antiquewhite;
-                margin: auto;
-                text-align: center;
-                text-justify:auto;
-                font-family: 'Rajdhani', sans-serif;
-                font-weight: 900;
-            }
+        .service-container-cards {
+            width: 100%;
+            height: 250px;
+            background-color: antiquewhite;
         }
+
+        .service-container-questions {
+            width: 100%;
+            height: 300px;
+            background-color: #000;
+        }
+
     }
 } */
 
@@ -409,7 +382,7 @@ body {
         .title-education {
             width: 100%;
             height: auto;
-            text-align: start;
+            text-align: end;
 
             p {
                 font-family: 'Rajdhani', sans-serif;
@@ -548,7 +521,7 @@ body {
         .title-skills {
             width: 100%;
             height: auto;
-            text-align: end;
+            text-align: start;
 
             p {
                 font-family: 'Rajdhani', sans-serif;
@@ -565,7 +538,7 @@ body {
             align-items: center;
             justify-content: center;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 10px;
 
             .skill {
                 width: 120px;
@@ -574,9 +547,9 @@ body {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-
-                box-shadow: 0px 1px 10px 2px rgb(124, 124, 124);
-                border-radius: 100%;
+                box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.356);
+                border-radius: 10px;
+                transition: 0.3s;
 
                 img {
                     width: 50%;
@@ -584,6 +557,8 @@ body {
                 }
 
                 &:hover {
+                    box-shadow: 0px 1px 15px 2px rgba(0, 0, 0, 0.664);
+
                     img {
                         scale: 1.2;
                     }
@@ -603,7 +578,7 @@ body {
         width: 1200px;
         height: auto;
         margin: 0 auto;
-        text-align: start;
+        text-align: end;
 
         @include tablet1 {
             width: 90%;
