--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;700&family=Raleway:wght@100;300;500;900&display=swap");
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
